--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 
 body
 {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.animated-gradient 
+.animatedGradient 
 {
     width: 100vw;
     height: 100vh;
@@ -43,6 +43,56 @@ body
     height: 100vh;
 }
 
+#hiddenDiv
+{
+    display: none;
+}
+
+#settings
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    gap: 0.5rem;
+}
+
+.inputField
+{
+    font-family: 'Montserrat', sans-serif;
+    width: 20rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.inputField:focus
+{
+    outline: none;
+}
+
+.bigButton
+{
+    background-color: #3831ff;
+    color: white;
+    width: 20rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 1rem;
+    transition: 0.5s ease;
+}
+
+.bigButton:hover
+{
+    background-color: rgb(0, 33, 133);
+}
+
 .timer
 {
     display: flex;
@@ -56,7 +106,7 @@ body
     color: white;
 }
 
-.buttons-div
+.buttonsDiv
 {
     display: flex;
     gap: 1rem;
@@ -64,7 +114,7 @@ body
 
 .buttons
 {
-    background-color: #0800ff;
+    background-color: #3831ff;
     color: white;
     width: 7.5rem;
     height: 2.5rem;
@@ -77,6 +127,8 @@ body
 
 .buttons:hover
 {
-    background-color: #ff0080;
+    background-color: rgb(0, 33, 133);
 }
+
+
 
