--- a/css/style.css
+++ b/css/style.css
@@ -96,19 +96,21 @@ body
 .timer
 {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
 #time
 {
-    font-size: 7.5rem;
+    font-size: 7rem;
     color: white;
 }
 
 .buttonsDiv
 {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
@@ -116,8 +118,8 @@ body
 {
     background-color: #3831ff;
     color: white;
-    width: 7.5rem;
-    height: 2.5rem;
+    width: 20rem;
+    height: 3rem;
     border: none;
     border-radius: 0.25rem;
     font-size: 16px;
@@ -128,6 +130,25 @@ body
 .buttons:hover
 {
     background-color: rgb(0, 33, 133);
+}
+
+@media screen and (min-width: 768px)
+{
+    #time
+    {
+        font-size: 7.5rem;
+    }
+
+    .buttonsDiv
+    {
+        flex-direction: row;
+    }
+
+    .buttons
+    {
+        width: 7.5rem;
+        height: 2.5rem;
+    }
 }
 
 
